--- a/.lh/next.config.mjs.json
+++ b/.lh/next.config.mjs.json
@@ -3,7 +3,7 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 3,
+            "activePatchIndex": 5,
             "patches": [
                 {
                     "date": 1728727490845,
@@ -20,6 +20,14 @@
                 {
                     "date": 1728729099616,
                     "content": "Index: \n===================================================================\n--- \n+++ \n@@ -2,9 +2,9 @@\n const nextConfig = {\n \n   crossOrigin: 'anonymous',\n   images: {\n-    domains: ['www.kiwop.com'],  // Remplace par le domaine de tes images\n+    domains: ['www.kiwop.com'],  \n   },\n };\n \n export default nextConfig;\n"
+                },
+                {
+                    "date": 1728730048238,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -2,9 +2,9 @@\n const nextConfig = {\n \n   crossOrigin: 'anonymous',\n   images: {\n-    domains: ['www.kiwop.com'],  \n+    domains: ['www.kiwop.com',],  \n   },\n };\n \n export default nextConfig;\n"
+                },
+                {
+                    "date": 1728730054048,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -2,9 +2,9 @@\n const nextConfig = {\n \n   crossOrigin: 'anonymous',\n   images: {\n-    domains: ['www.kiwop.com',],  \n+    domains: ['www.kiwop.com', 'cdn.example.com'],  \n   },\n };\n \n export default nextConfig;\n"
                 }
             ],
             "date": 1728727490845,
